incubator/imposter-server/0.0.2/helm-values.md
# imposter-server

![Version: 0.0.2](https://img.shields.io/badge/Version-0.0.2-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: 1.6.0](https://img.shields.io/badge/AppVersion-1.6.0-informational?style=flat-square)

A private Among Us server for TrueNAS SCALE.

**Homepage:** <https://github.com/Dyllan2000alfa/apps/tree/imposter-server/charts/incubator/imposter-server>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| TrueCharts | info@truecharts.org | https://truecharts.org |

## Source Code

* <https://github.com/truecharts/apps/tree/master/incubator/imposter-server>

## Requirements

Kubernetes: `>=1.16.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://truecharts.org | common | 8.14.2 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| env.IMPOSTOR_AntiCheat__BanIpFromGame | bool | `true` |  |
| env.IMPOSTOR_AntiCheat__Enabled | bool | `true` |  |
| env.IMPOSTOR_Debug__GameRecorderEnabled | bool | `true` |  |
| env.IMPOSTOR_Debug__GameRecorderPath | string | `""` |  |
| env.IMPOSTOR_Server__ListenIp | string | `"0.0.0.0"` |  |
| env.IMPOSTOR_Server__PublicIp | string | `"127.0.0.1"` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"aeonlucid/impostor"` |  |
| image.tag | string | `"1.6.0@sha256:fbfe8e95db116771c488570e20834f3038501741745db60031e05b282fce00c3"` |  |
| service.main.ports.main.port | int | `22023` |  |
| service.main.ports.main.protocol | string | `"UDP"` |  |
| service.main.ports.main.targetPort | int | `22023` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.5.0](https://github.com/norwoodj/helm-docs/releases/v1.5.0)
